--- a/index.html
+++ b/index.html
@@ -4,31 +4,41 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>title</title>
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <title>Todo</title>
   </head>
   <body>
-    <div class="todo">
-      <div class="todo-head">
-        <input type="text" value="" class="newList none" placeholder="List">
-        <button type="button" class="addList">&#10010;</button>
-      </div>
-      <div class="todo-body">
-        <div class="lists"></div>
-        <ul class="tasks"></ul>
-      </div>
-      <div class="todo-footer">
-        <div class="todo-footer_left">
-          <button type="button" class="addTask">&#10010;</button>
-          <input type="text" value="" class="newTask none" placeholder="Task">
+      <div class="todo">
+        <div class="todo_header">
+          <h1 class="todo_title">Todo</h1>
+          <div class="todo_top_menu">
+            <input class="menu_input inputList none" type="text" name="">
+            <button class="todo_btn btn_list">+</button>
+          </div >
+        <div class="todo_lists">
+            
         </div>
-        <div class="todo-footer_right">
-          <button  class="filter btn-all">Все</button>
-          <button  class="filter btn-done">Выполненные</button>
-          <button  class="filter btn-not-done">Не выполненные</button>
+        </div>
+        <div class="todo_body">
+          <ul class="todo_tasks">
+            
+          </ul>
+        </div>
+        <div class="todo_footer">
+          <div class="todo_bottom_menu">
+            <input class="menu_input inputTask none" type="text" name="">
+            <button class="todo_btn btn_task">+</button>
+          </div>
+          <div class="todo_footer_filters">
+            <button class="todo_btn_filter all">All</button>
+            <button class="todo_btn_filter done">Done</button>
+            <button class="todo_btn_filter not-done">Not Done</button>
+          </div>
         </div>
       </div>
-    </div>
-   <script src="main.js"></script>
+    <script src="js/List.js"></script>
+    <script src="js/Task.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
